# princess_maker_rpg

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  main.cpp
config/: config.ini
entities/: Entity.cpp  Entity.h  Player.cpp  Player.h
entities/components/: MovementComponent.cpp  MovementComponent.h
ressources/: Button.cpp  Button.h
src/: Game.cpp  Game.hpp  PCH.hpp  main.cpp
src/UI/: Button.cpp  Button.hpp  DropDown.cpp  DropDown.hpp  PauseMenu.cpp  PauseMenu.hpp
src/entities/: Entity.cpp  Entity.hpp  Player.cpp  Player.hpp
src/entities/components/: AnimationComponent.cpp  AnimationComponent.hpp  HitboxComponent.cpp  HitboxComponent.hpp  MovementComponent.cpp  MovementComponent.hpp
src/states/: EditorState.cpp  EditorState.hpp  GameState.cpp  GameState.hpp  MainMenuState.cpp  MainMenuState.hpp  SettingState.cpp  SettingState.hpp  State.cpp  State.hpp  StateWButtons.cpp  StateWButtons.hpp  StateWPause.cpp  StateWPause.hpp
src/utilities/: Settings.cpp  Settings.hpp  Tile.cpp  Tile.hpp  TileMap.cpp  TileMap.hpp
states/: GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  State.cpp  State.h
